codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__queued_follow_up_after_hidden_status_uses_full_viewport_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---



• Visible commentary line

• Queued follow-up messages
  ↳ queued after visible output
    ⌥ + ↑ edit last queued message

› Ask Codex to do anything

  ? for shortcuts                                            100% context left
