codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__remote_accounts_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Accounts
  Select an account to make it active.

› 1. Remote Primary (current)  status: available • email: remote-
                               primary@example.com

  Press enter to confirm or esc to go back
