codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__resumed_turn_history_since_last_compaction_boundary.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
╭─────────────────────────────────────────────────╮
│ >_ OpenAI Codex (v0.0.0)                        │
│                                                 │
│ model:     test-model medium   /model to change │
│ directory: /home/user/project                   │
╰─────────────────────────────────────────────────╯

  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /permissions - choose what Codex is allowed to do
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues


• Context compacted



› hello after compaction



• assistant reply after compaction
