codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__streamed_generated_render_stress_message_matches_one_shot_render_through_tui_flush_path.snap
---
source: tui/src/chatwidget/tests.rs
expression: normalize_snapshot_paths(actual)
---

  - Agora o pacote precisa continuar legivel mesmo com muitos itens curtos, detalhes longos e
  caminhos locais extensos.
  - Campos novos no bundle:
      - Required outcome / exactness contract
      - Optimization target / cost model
      - Current solution shape
      - Primary task evidence
        Arquivos:
  - agents/senior-overengineering-auditor.toml
  - .templates/overengineering-audit-brief-template.md
  - agents/senior-recon-scout.toml
  - skills/standards-source-resolution/references/reference-checklist.md

  Bookkeeping

  - Atualizei:
      - .sangoi/CHANGELOG.md
      - .sangoi/codex_scratchpad_local.md
  - Criei:
      - .sangoi/planning/live-render-follow-up-1.md
      - .sangoi/planning/live-render-follow-up-2.md
      - .sangoi/planning/live-render-follow-up-3.md
      - .sangoi/planning/live-render-follow-up-4.md

  Estado atual

  - live precisa bater com replay.
  - a tela nao pode perder linhas nem colar fragmentos em rows erradas.


› Ask Codex to do anything

  gpt-5.3-codex default · 100% left · /tmp/project
