codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__task_complete_restores_unacknowledged_pending_steers_to_composer_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
› queued while streaming

                                                             100% context left
